# Resume_Score

./: README.md  app.py  pyproject.toml  requirement.txt
static/: style.css
templates/: index.html
